--- a/templates/confirmregistration.html
+++ b/templates/confirmregistration.html
@@ -21,11 +21,12 @@
 				<input class="input_box" type="text" name="consultation_hours" value="{{ consultation_hours }}" readonly unselectable="on" />
 				<input class="input_box" type="text" name="illness" value="" placeholder="病情概要" />
 				<input class="input_box" type="text" name="address" value="{{ address }}" readonly unselectable="on" />
+				<input class="input_box" type="text" name="registration_price" value="{{ registration_price }}" readonly unselectable="on" />
 
 				<input class="input_box" type="text" name="doctor_id" value="{{ doctor_id }} " style = "display:none" />
 				<input class="input_box" type="text" name="patient_id" value="{{ patient_id }} " style = "display:none" />
 
-				<input class="button_box" type="submit" value="确认" />
+				<input class="button_box" type="submit" value="确认并支付" />
 			</form>
 		</div>
 	</body>
