--- a/templates/patientcenter.html
+++ b/templates/patientcenter.html
@@ -14,9 +14,9 @@
 			<div class="yiliao">医疗服务</div>
 			<dl>
 				<dd><a href="/choosedepartment/">预约挂号</a></dd>
-				<dd><a href="#">就诊指南</a></dd>
-				<dd><a href="#">交通指南</a></dd>
-				<dd><a href="#">预约信息</a></dd>
+				<dd><a href="/guide/">就诊指南</a></dd>
+				<dd><a href="/traffic/">交通指南</a></dd>
+				<dd><a href="/patientshowregistration/">预约信息</a></dd>
 			</dl>
 		</div>
 	</body>
